[gd_scene load_steps=3 format=3 uid="uid://bjrsq01sxyrdn"]

[ext_resource type="Script" uid="uid://dcx6cqhy24ljo" path="res://world/pipe_obstacle.gd" id="1_4vjn1"]
[ext_resource type="Texture2D" uid="uid://dlmxl3crxfvw4" path="res://assets/pipes/Obstacle1.png" id="1_l88nt"]

[node name="PipeObstacle" type="Node2D"]
script = ExtResource("1_4vjn1")

[node name="UpperObstacle" type="NinePatchRect" parent="."]
offset_right = 87.0
offset_bottom = 312.0
texture = ExtResource("1_l88nt")
patch_margin_left = 11
patch_margin_top = 14
patch_margin_right = 11
patch_margin_bottom = 179

[node name="Area2D" type="Area2D" parent="UpperObstacle"]

[node name="UpperCollisionShape" type="CollisionShape2D" parent="UpperObstacle/Area2D"]
position = Vector2(44, 156)

[node name="LowerObstacle" type="NinePatchRect" parent="."]
offset_left = -87.0
offset_bottom = 312.0
rotation = 3.14159
pivot_offset = Vector2(87, 0)
texture = ExtResource("1_l88nt")
patch_margin_left = 11
patch_margin_top = 14
patch_margin_right = 11
patch_margin_bottom = 179

[node name="Area2D" type="Area2D" parent="LowerObstacle"]

[node name="LowerCollisionShape" type="CollisionShape2D" parent="LowerObstacle/Area2D"]
position = Vector2(42, 156)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(45.5, 175.5)
scale = Vector2(4.65, 2.95)

[connection signal="body_entered" from="UpperObstacle/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="LowerObstacle/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
